@@ -1,3 +1,5 @@
+.idea/*
+.vscode/*
 .classpath
 .project
 .settings
