@@ -11,7 +11,7 @@ before_script:
   - chmod +x gradlew
 
 variables:
-  PROJECT_VERSION: "0.1.1"
+  PROJECT_VERSION: "0.1.2"
   GRADLE_FLAGS: "-PbuildNumber=release"
 
 cache:
