@@ -1,4 +1,4 @@
-version = 0.1.1
+version = 0.1.2
 mcversion = 1.12.2
 forgeversion = 14.23.5.2768
 mcpversion = stable_39
